--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "fidoo/igo",
+    "description": "The Igo PHP Framework.",
     "type": "php-framework",
     "require": {
         "composer/installers": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
