--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "fidoo/igo",
     "description": "The Igo PHP Framework.",
-    "type": "php-framework",
+    "keywords": ["framework", "igo", "php", "igophp", "fidoo"],
+    "license": "MIT",
+    "type": "project",
     "require": {
         "composer/installers": "~1.0"
     },
@@ -9,5 +11,8 @@
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "config": {
+        "preferred-install": "dist"
     }
 }
